syntax = "proto3";

package skysign_proto;

import "google/api/annotations.proto";
import "common.proto";

option java_package = "proto.skysign";
option java_multiple_files = true;
option go_package = ".;skysign_proto";

service MissionEdgeService {
    rpc PullMission (PullMissionRequest) returns (Mission) {
        option (google.api.http) = {
            get: "/api/v1/missions/{id}"
        };
    };
}

message PullMissionRequest {
    string id = 1;
}
